<resources>

    <string name="facebook_app_id">125133701478821</string>
    <string name="fb_login_protocol_scheme">fb125133701478821</string>

    <string name="app_name">Socialate</string>
    <string name="email_registration">Email Registration</string>
    <string name="next">next</string>
    <string name="email_address">Email Address</string>
    <string name="email_taken">Email address is taken</string>
    <string name="create_account">Create Account</string>
    <string name="create_password">Create Password</string>
    <string name="password_short">Password is too short</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="failed_account">Failed to Create Account, Try Again.</string>
    <string name="setup_your_new_profile">Setup Your New Profile</string>
    <string name="email">Email</string>
    <string name="sign_in">sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="socialate">SOCIALATE</string>
    <string name="need_an_account">Need an account?</string>
    <string name="click_here">Click here.</string>
    <string name="add_entertainment_spot">Add Entertainment Spot</string>
    <string name="logout">Logout</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="picture_of_area">picture of area</string>
    <string name="add_new_entertainment_area">Add New Entertainment Area</string>
    <string name="name_of_place">Name of place</string>
    <string name="name_of_owner_optional">Name of Owner(optional)</string>
    <string name="physical_address">Physical Address</string>
    <string name="description">Description</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="error_password_length">Passwords must be at least 8 characters in length</string>
    <string name="name_display">Display Name</string>
    <string name="full_string_app_name">full name</string>
    <string name="emailDisplay">Email</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="submit_changes">submit changes</string>
    <string name="change_photo">Change Photo</string>
    <string name="full_name1">Full name1</string>
    <string name="display_name1">Display Name1</string>
    <string name="describe_yourself">Describe yourself, aaaaaaaaaaa</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="email_address1">Email address1</string>
    <string name="cell_phone_number">Cell Phone number</string>
    <string name="select_gender">Select gender</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="image_of_added_area">image_of_added_area</string>
    <string name="submit_changes1">Submit Changes</string>
    <string name="send_changes">send changes</string>
    <string name="submit_change">Submit</string>
    <string name="full_name2">Full name</string>
    <string name="display_name2">Display name</string>
    <string name="describe_yourself1">Describe yourself</string>
    <string name="phone_number">Phone number</string>
    <string name="home_address">Home address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <array name="gender">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="affordable">Low Cost</string>
    <string name="mediumPrice">Medium Cost</string>
    <string name="highPrice">High Cost</string>
    <array name="cost">
        <item>How costly is this place for you?</item>
        <item>Low Cost</item>
        <item>Medium Cost</item>
        <item>High Cost</item>
    </array>
    <string name="image_for_the_entertainment_spot">Image for the entertainment spot</string>
    <string name="francis_tinashe_mudavanhu">Francis Tinashe Mudavanhu</string>
    <string name="mansa_night_club">Mansa Night Club</string>
    <string name="Owner">Owner:</string>
    <string name="addedAreaDescription">Description:</string>
    <string name="smoke_and_grill">Smoke and Grill</string>
    <string name="address">Address:</string>
    <string name="address1">Address:</string>
    <string name="entetainment_spot_owner">Entetainment spot owner</string>
    <string name="entertainment_spot_address">Entertainment spot Address</string>
    <string name="fake_address">23 Tiger Lane, Roarstate, Myburg</string>
    <string name="entertainment_spot_description">Entertainment spot description</string>
    <string name="fake_description">The place where beasts are born and raised</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="display">Display Name</string>
    <string name="name_nsfvvashfhjgafjag">Name NSFVVASHFHJGAFJAG</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="action_search">Search</string>
    <string name="app_label">Socialate</string>
    <string name="search_hint">Search for a spot</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search_desc">search option</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="multiautocompletetextview_ajfgajhgfjgahdfg">MultiAutoCompleteTextView ajfgajhgfjgahdfg</string>
    <string name="musa_rikhotso">Musa Rikhotso</string>
    <string name="musa_rikhotso1">Musa Rikhotso</string>
    <string name="_2017_08_20_14_00pm">2017-08-20 14:00pm</string>
    <string name="_2">2</string>
    <string name="like">Like</string>
    <string name="_22">2</string>
    <string name="likes">Like</string>
    <string name="continue_with_google">Continue with Google</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proximity_desc">This setting will be used to search nearby areas</string>
    <string name="proximity">Proximity</string>
    <string name="_10_km">10 KM</string>
    <string name="_25_km">25 KM</string>
    <string name="_50_km">50 KM</string>
    <string name="_100_km">100 KM</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="the_average_person_says_this_place_overpriced">The average person says this place overpriced</string>
    <string name="average_rate_low_cost">Average rate: Low Cost</string>
    <string name="share_button">share button</string>
    <string name="nearby_areas">Nearby Areas</string>
</resources>
