<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/viewProfileToolbar" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_width="0dp"
            tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewProfileToolbar" app:layout_constraintVertical_bias="1.0">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp">

            <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp" app:srcCompat="@drawable/default_avatar"
                    android:id="@+id/imageView" android:layout_weight="1"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/change_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" android:id="@+id/textView2"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/colorPrimary" android:textSize="18sp" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.501"
                    android:weightSum="1" android:id="@+id/textInputLayout5" android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart" android:inputType="textPersonName" android:text="@string/full_name1"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" android:id="@+id/textInputLayout6">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" android:text="@string/display_name1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/textInputLayout7"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/describe_yourself" android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:text="@string/private_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="24sp" android:textColor="@color/colorPrimaryText"
                    android:textAlignment="viewStart" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" android:id="@+id/textInputLayout8">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" android:text="@string/email_address1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/textInputLayout9"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" android:text="@string/cell_phone_number"/>
            </android.support.design.widget.TextInputLayout>
            <AutoCompleteTextView
                    android:text="@string/select_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/autoCompleteTextView"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>