<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.socialteinc.socialate.LoginActivity">


    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textInputLayout" tools:layout_editor_absoluteY="0dp" tools:ignore="MissingConstraints">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress|textPersonName"
                android:id="@+id/email_field" android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryText"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout1"
            tools:layout_editor_absoluteY="86dp" tools:layout_editor_absoluteX="8dp" tools:ignore="MissingConstraints">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/password"
                android:id="@+id/password_field" android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            app:layout_constraintRight_toRightOf="@+id/textInputLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="217dp"
            tools:layout_editor_absoluteX="139dp" android:id="@+id/SinginButton" android:onClick="signIn"
            android:backgroundTint="@color/colorPrimary"/>


</android.support.constraint.ConstraintLayout>