<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.socialteinc.socialate.RegisterEmailActivity">
    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/createProfileToolbar" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_width="match_parent"/>
<ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/createProfileToolbar" app:layout_constraintVertical_bias="0.0">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageView"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/default_avatar"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                app:layout_constraintTop_toBottomOf="@+id/accountSetupTextView" />

        <TextView
                android:id="@+id/setupPictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_profile_picture"
                android:textColor="@color/colorPrimary"
                tools:clickable="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/setupPictureButton" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/textInputLayout3"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="16dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/display_name" android:id="@+id/displayNameEditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/textInputLayout4">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:id="@+id/fullNameEditText"/>

        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/setupSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/submit"
                tools:layout_constraintRight_creator="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"/>

        <TextView
                android:id="@+id/accountSetupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/setup_your_new_profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>

</android.support.constraint.ConstraintLayout>
